Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129439

QToolBar incorrect display on Windows 11

XMLWordPrintable

    • Windows
    • b3c0b08eb (dev), 53a5df8cf (6.8)

      QToolBar buttons when checked have no difference with the ones that are not (see screenshots).

      Code:

      int main(int argc, char* argv[])
      {
          QApplication app(argc, argv);
          QMainWindow mw;
          auto tb = new QToolBar;
          mw.addToolBar(tb);
          auto a1 = new QAction("Act 1");
          auto a2 = new QAction("Act 2");
          tb->addAction(a1);
          tb->addAction(a2);
          a1->setCheckable(true);
          a2->setCheckable(true);
          a2->setChecked(true);
          auto menu = mw.menuBar()->addMenu("Menu");
          menu->addAction(a1);
          menu->addAction(a2);
          auto centralWidget = new QWidget;
          auto lay = new QHBoxLayout(centralWidget);
          auto pb = new QPushButton("Push me!");
          pb->setCheckable(true);
          lay->addWidget(pb);
          lay->addWidget(new QCheckBox("CheckBox"));
          lay->addWidget(new QRadioButton("Radio Button"));
          mw.setCentralWidget(centralWidget);
          mw.show();
          return app.exec();
      }
      

        1. default.png
          3 kB
          Ilya Parniuk
        2. fusion.png
          5 kB
          Ilya Parniuk
        For Gerrit Dashboard: QTBUG-129439
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            crystalbit Ilya Parniuk
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes